fixes: Some changes to the api generator
