# docs/apigen/V1/messages/message_models.rb
@@ -1,4 +1,22 @@
-FanlinkApi::API.model :message_json do
+FanlinkApi::API.model :message_app_json do
+  type :object do
+    message :object do
+      id :int32
+      person_id :int32
+      room_id :int32
+      body :string
+      hidden :bool
+      created_time :datetime
+      status :int32
+      picture_url :string
+      audio_url :string
+      person :person_app_json
+      mentions :nention_app_json
+    end
+  end
+end
+
+FanlinkApi::API.model :message_portal_json do
   type :object do
     message :object do
       id :int32
