# docs/specs/Swagger-V1.yaml
@@ -9259,26 +9259,12 @@ definitions:
           id:
             type: integer
             format: int32
-          product_id:
-            type: integer
-            format: int32
           internal_name:
             type: string
           points:
             type: integer
             format: int32
-          created_at:
-            type: string
-          updated_at:
-            type: string
-          picture_file_name:
-            type: string
-          picture_content_type:
-            type: string
-          picture_file_size:
-            type: integer
-            format: int32
-          picture_updated_at:
+          picture_url:
             type: string
           description:
             type: string
@@ -9286,15 +9272,9 @@ definitions:
             type: string
         required:
         - id
-        - product_id
         - internal_name
         - points
-        - created_at
-        - updated_at
-        - picture_file_name
-        - picture_content_type
-        - picture_file_size
-        - picture_updated_at
+        - picture_url
         - description
         - name
     required:
@@ -9315,18 +9295,7 @@ definitions:
             type: string
           purchase_url:
             type: string
-          picture_file_name:
-            type: string
-          picture_content_type:
-            type: string
-          picture_file_size:
-            type: integer
-            format: int32
-          picture_updated_at:
-            type: string
-          created_at:
-            type: string
-          updated_at:
+          picture_url:
             type: string
           available:
             type: boolean
@@ -9344,12 +9313,7 @@ definitions:
         - product_id
         - price
         - purchase_url
-        - picture_file_name
-        - picture_content_type
-        - picture_file_size
-        - picture_updated_at
-        - created_at
-        - updated_at
+        - picture_url
         - available
         - name
         - description
@@ -9442,8 +9406,10 @@ definitions:
             format: int32
           created_at:
             type: string
+            format: date-time
           updated_at:
             type: string
+            format: date-time
         required:
         - id
         - message_id
